feat: add company when return user